Contenst  Line 비교 1차 수정